Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       
       <h3>Sources</h3>
       
-      <a href="">Visit W3Schools</a>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Visit W3Schools</a>
       `Lonely Planet`
-`http://www.lonelyplanet.com/saudi-arabia/riyadh`
+``
 
 `Wikipedia`
 `http://en.wikipedia.org/wiki/Riyadh`
