--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       
       <h3>Sources</h3>
       
-      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Visit W3Schools</a>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh"></a>
       `Lonely Planet`
 ``
 
